--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,9 +23,14 @@ body{
 	padding-left:10px;
 	font-size:14pt;
 	margin-top: -20px;
+	padding-bottom: 30px;
 }
 section{
 	padding-left: 20px;
+}
+h3{
+	
+	padding-left: 70px;
 }
 #meus-pacie{
 	text-align:center;
@@ -119,10 +124,15 @@ table{
 	font-weight: bold;
 	font-family: 'Raleway', sans-serif;
 	padding: 5px 50px 5px;
-	margin-bottom: 40px;
+	margin-bottom: 100px;
 }
 #adicionar-paciente:hover{
 	background-color: rgba(169,169,169,0.8);
 	box-shadow: 0 0 5px;
 	transition: 0.7; 
+}
+footer{
+	background-color: #D3D3D3;
+	margin: -20px -30px -40px -10px;
+	padding: 5px 0px 20px 10px;
 }
